Update tmux window related bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,16 +31,16 @@ bind 8 select-pane -t 7
 bind 9 select-pane -t 8
 bind 0 select-pane -t 9
 
-bind ! select-window -t 1
-bind @ select-window -t 2
-bind '#' select-window -t 3
-bind '$' select-window -t 4
-bind % select-window -t 5
-bind ^ select-window -t 6
-bind & select-window -t 7
-bind * select-window -t 8
-bind ( select-window -t 9
-bind ) select-window -t 10
+bind '!' select-window -t 0
+bind '@' select-window -t 1
+bind '#' select-window -t 2
+bind '$' select-window -t 3
+bind % select-window -t 4
+bind ^ select-window -t 5
+bind & select-window -t 6
+bind * select-window -t 7
+bind ( select-window -t 8
+bind ) select-window -t 9
 
 # Activity monitoring
 setw -g monitor-activity on
