--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,11 +6,14 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-continuum      \
 '
-
 set -g prefix ^l
 
+## tmux resurrect plugin
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
+set -g @resurrect-processes 'irb ssh'
+
+
 set -g mode-mouse on
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
@@ -31,8 +34,8 @@ bind 8 select-pane -t 7
 bind 9 select-pane -t 8
 bind 0 select-pane -t 9
 
-bind '!' select-window -t 0
-bind '@' select-window -t 1
+bind ! select-window -t 0
+bind @ select-window -t 1
 bind '#' select-window -t 2
 bind '$' select-window -t 3
 bind % select-window -t 4
@@ -40,7 +43,11 @@ bind ^ select-window -t 5
 bind & select-window -t 6
 bind * select-window -t 7
 bind ( select-window -t 8
-bind ) select-window -t 9
+bind ) select-window -t 10
+
+bind r source-file ~/.tmux.conf
+bind n command-prompt 'rename-window %%'
+bind N command-prompt 'rename-session %%'
 
 # Activity monitoring
 setw -g monitor-activity on
